Revert "Fix spacing above headings"
This reverts commit 1eb99aa29bfdaf235c8a9ac7013df1a21aa7c1ee [formerly a8bfe405e8b94c62f93a3ea002f4dc347bb3499b].


Former-commit-id: acb04d2e95d8e33229aff4202e7e2d9eec14ea88

--- a/web/packages/app/src/App.css
+++ b/web/packages/app/src/App.css
@@ -30,14 +30,6 @@
   padding-right: 2rem;
 }
 
-.App h2 {
-  margin-top: 1rem;
-}
-
-.App h3 {
-  margin-top: 0.5rem;
-}
-
 h1 {
   text-align: center;
   background-color: #dddddd;
